--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,26 @@
 services:
+  app:
+    build: ./Web
+    environment:
+      - NODE_ENV=production
+    expose:
+      - "3000"
+
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "8080:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - app
+
   backend:
     build: ./Backend
     ports:
       - "8000:8000"
     depends_on:
       - db
-  app:
-    build: ./Web
-    ports:
-      - "3000:3000"
 
   db:
     image: mongo:7
@@ -17,8 +29,8 @@ services:
       MONGO_INITDB_ROOT_USERNAME: mongo
       MONGO_INITDB_ROOT_PASSWORD: pass1234
       MONGO_INITDB_DATABASE: RubrITM
-    ports:
-      - "27017:27017"
+    expose:
+      - "27017"
     volumes:
       - mongodata:/data/db
 
