--- a/RubrITMCloneV2/Web/package.json
+++ b/RubrITMCloneV2/Web/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "@nuxt/fonts": "^0.10.3",
     "@nuxt/image": "^1.9.0",
-    "@nuxt/ui": "^2.21.0",
-    "nuxt": "^3.15.4",
+    "@nuxt/ui": "2.21.0",
+    "nuxt": "3.15.4",
     "vue": "latest",
     "vue-router": "latest"
   }
