--- a/Web/package.json
+++ b/Web/package.json
@@ -13,7 +13,9 @@
     "@nuxt/fonts": "^0.11.1",
     "@nuxt/image": "^1.10.0",
     "@nuxt/ui": "2.21.1",
+    "@pinia/nuxt": "^0.11.0",
     "nuxt": "^3.16.2",
+    "pinia": "^3.0.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   }
