fix docker error and fix groups endpoints

--- a/Web/.env
+++ b/Web/.env
@@ -1,2 +1,2 @@
-API_URL=http://172.18.128.1:8000
-# API_URL=http://localhost:8000
+# API_URL=http://172.18.128.1:8000
+API_URL=http://localhost:8000
