--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,8 +12,11 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "ioredis": "^5.6.1",
     "mongoose": "^8.12.1",
+    "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10"
   }
 }
