--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - "8000:8000"
     depends_on:
       - db
+      - redis
 
   db:
     image: mongo:7
@@ -33,6 +34,12 @@ services:
       - "27017:27017"
     volumes:
       - mongodata:/data/db
+
+  redis:
+    image: redis:7
+    ports:
+      - "6379:6379"
+    restart: always
 
 volumes:
   mongodata:
