--- a/Web/package.json
+++ b/Web/package.json
@@ -14,6 +14,7 @@
     "@nuxt/image": "^1.10.0",
     "@nuxt/ui": "2.21.1",
     "@pinia/nuxt": "^0.11.0",
+    "html2pdf.js": "^0.10.3",
     "nuxt": "^3.16.2",
     "pinia": "^3.0.2",
     "pinia-plugin-persistedstate": "^4.2.0",
