--- a/Web/package.json
+++ b/Web/package.json
@@ -14,6 +14,14 @@
     "@nuxt/image": "^1.10.0",
     "@nuxt/ui": "2.21.1",
     "@pinia/nuxt": "^0.11.0",
+    "@tiptap/extension-color": "^2.12.0",
+    "@tiptap/extension-highlight": "^2.12.0",
+    "@tiptap/extension-text-align": "^2.12.0",
+    "@tiptap/extension-text-style": "^2.12.0",
+    "@tiptap/extension-underline": "^2.12.0",
+    "@tiptap/pm": "^2.12.0",
+    "@tiptap/starter-kit": "^2.12.0",
+    "@tiptap/vue-3": "^2.12.0",
     "html2pdf.js": "^0.10.3",
     "nuxt": "^3.16.2",
     "pinia": "^3.0.2",
