--- a/Web/package.json
+++ b/Web/package.json
@@ -24,6 +24,7 @@
     "@tiptap/vue-3": "^2.12.0",
     "html2pdf.js": "^0.10.3",
     "nuxt": "^3.16.2",
+    "nuxt-charts": "^0.1.9",
     "pinia": "^3.0.2",
     "pinia-plugin-persistedstate": "^4.2.0",
     "vue": "^3.5.13",
