--- a/Web/package.json
+++ b/Web/package.json
@@ -28,6 +28,7 @@
     "pinia": "^3.0.2",
     "pinia-plugin-persistedstate": "^4.2.0",
     "vue": "^3.5.13",
+    "vue-i18n": "^11.1.6",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
